--- a/user.properties
+++ b/user.properties
@@ -1,19 +1,5 @@
 #fywl
-#Fri Oct 16 17:41:22 CST 2015
-videoPath=E\:\\eclipse-jee-juno-SR1-win32\\eclipse-jee-juno-SR1-win32\\workspace\\ILook
+#Tue Oct 20 09:54:00 CST 2015
 openSoftwareAutoLoginFlag=false
-dplzFlag=false
-water_text=
-headLV=800X600
-username=1239456@qq.com
-schoolStr=
-themeStr=
-infoStr=
-water_text_color=1
-noteLV=2048X1536
-water_img=
-teacherStr=
-water_location=3
 password=lemobSUkGNs\=
-water_text_size=
-frameRate=50000
+username=test01@fywl.com
